objects/advpm__AdvoDoc_Template__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Base_Object__c</fullName>
        <label>Base Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Matter</fullName>
                    <default>true</default>
                    <label>Matter</label>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__BodyText__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>advpm__Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>advpm__Output_Format</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Margin_Bottom__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Provide value in MM</inlineHelpText>
        <label>Margin Bottom</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Margin_Left__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Provide value in MM</inlineHelpText>
        <label>Margin Left</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Margin_Right__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Provide value in MM</inlineHelpText>
        <label>Margin Right</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Margin_Top__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Provide value in MM</inlineHelpText>
        <label>Margin Top</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AdvoDoc Template</label>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>advpm__Base_Object__c</columns>
        <columns>advpm__Description__c</columns>
        <columns>advpm__Category__c</columns>
        <columns>advpm__Format__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdvoDoc Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>